--- a/config/install/http451.settings.yml
+++ b/config/install/http451.settings.yml
@@ -1,7 +1,7 @@
 https451:
   page_title: '451 Unavailable For Legal Reasons'
   page_status: '451'
-  page_content: '<html>
+  page_content: "<html>
     <head><title>Unavailable For Legal Reasons</title></head>
     <body>
      <h1>Unavailable For Legal Reasons</h1>
@@ -10,4 +10,4 @@ https451:
      access to resources hosted on servers deemed to be
      operated by the People's Front of Judea.</p>
     </body>
-   </html>'
+   </html>"
