--- a/.travis.yml
+++ b/.travis.yml
@@ -7,29 +7,35 @@ php:
   - 5.6
   - 7.0
   - 7.1
+  
+matrix:
+  fast_finish: true
+  allow_failures:
+    - php: hhvm
+    - php: 7.0
+    - php: 7.1
 
-mysql: 
-  database: drupal 
-  username: root 
-  encoding: utf8
+env:
+  global:
+    - PROJECT_DIR=/home/project
 
-before_install: 
+before_script:
+  - phpenv config-rm xdebug.ini
+  # This fixes a fail when install Drupal.
+  - echo 'sendmail_path = /bin/true' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - composer self-update
+  - composer install --no-dev
+#  - curl -LSs https://box-project.github.io/box2/installer.php | php
+#  - composer global require drupal/coder:~8.1
 
-install: 
-  # add composer's global bin directory to the path
-  # see: https://github.com/drush-ops/drush#install---composer
-  - export PATH="$HOME/.composer/vendor/bin:$PATH"
-
-  # Install Drush
-  - composer global require drush/drush:dev-master
-  - phpenv rehash
-
-# Create MySQL Database
-  - mysql -e 'create database drupal;'
-
-  # Install drupal default profile
-  - drush --verbose site-install --db-url=mysql://root:@127.0.0.1/drupal --yes
-
-# Import config for our pseudo install
-  - drush --verbose config-import active --yes
+script:
+  - if [ -n "${TRAVIS_BUILD_DIR+1}" ]; then PROJECT_DIR=$TRAVIS_BUILD_DIR; fi
+#  - phpunit
+#  - php box.phar build
+#  - php drupal.phar init
+#  - php drupal.phar check
+#  - php drupal.phar site:new drupal8.dev --latest --no-interaction
+#  - cd drupal8.dev
+#  - php ../drupal.phar site:install standard --langcode=en --db-type=sqlite --db-file=sites/default/files/.ht.sqlite --site-name="Drupal 8 Site Install" --site-mail=admin@example.com --account-name=admin --account-mail=admin@example.com --account-pass=admin --no-interaction
+#  - php ../drupal.phar chain --file=$PROJECT_DIR/config/dist/chain/sample.yml
+#  - ~/.composer/vendor/bin/phpcs --warning-severity=0 --standard=~/.composer/vendor/drupal/coder/coder_sniffer/Drupal/ruleset.xml $PROJECT_DIR/drupal8.dev/modules/custom/example
