--- a/http451.services.yml
+++ b/http451.services.yml
@@ -3,3 +3,4 @@ services:
     class: Drupal\http451\EventSubscriber\Http451RedirectSubscriber
     tags:
       - { name: event_subscriber }
+    arguments: ['@config.factory', '@entity.manager']
